# vecgeom-test

./: .clang-format  CMakeLists.txt  README.md
app/: CMakeLists.txt  Range.h  vecgeom-test.cc  vgthelper.cu  vgthelper.h
app/data/: cms2015.root
cmake/: FindVecGeom.cmake  VgtUtils.cmake
scripts/dev/: celeritas-gen.py
src/: CMakeLists.txt  vecgeomtest_config.h.in
src/base/: Array.h  Array.i.h  Constants.h  DeviceMirror.h  DeviceMirror.i.h  DeviceObject.h  DeviceUniquePtr.h  DeviceUniquePtr.i.h  KernelParamCalculator.cu  KernelParamCalculator.cuh  KernelParamCalculator.i.cuh  Macros.h  MakeSharedDevicePtr.h  Mirror.h  Mirror.i.h  OpaqueId.h  PrimaryTrack.h  Range.h  ScopeRootMessages.cc  ScopeRootMessages.h  ScopedState.h  ScopedState.i.h  Span.h  TypeToString.cc  TypeToString.h  Types.h  array.h  array.i.h  span.h
src/geom/: Definitions.h  InitialStateRef.cuh  RootModel.cc  RootModel.h  VGGeometry.cuh  VGGeometry.i.cuh  VGGeometryAdapter.cu  VGGeometryAdapter.cuh  VGGeometryHost.cc  VGGeometryHost.cu  VGGeometryHost.h  VGGeometryStorage.cuh  VGStateContainer.cu  VGStateContainer.cuh  VGStateContainer.i.cuh  VGStateRef.cuh  VGStateView.cuh  VecGeom.cc  VecGeom.h  VecGeomState.h
src/geom/detail/: Compatibility.h  VGNavStatePool.cc  VGNavStatePool.h
src/transport/: Transporter.cu  Transporter.cuh  vgthelper-dispatch.cc  vgthelper.cu  vgthelper.h
test/: CMakeLists.txt  test-devptr.cc
